# georisk

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: daily-site-refresh.yml  python-ci.yml  site-snapshot-verify.yml  web-publishing.yml
artifacts/examples/: prediction_output_example.json  website_snapshot_example.json
configs/backtesting/: country_week.yaml  country_week_interstate_onset_logit.yaml  country_week_interstate_onset_structural_90d.yaml  country_week_logit.yaml  country_week_onset_logit.yaml  country_week_onset_structural_90d.yaml  replay_iran.yaml
configs/data_platform/: pipeline_country_week_features.yaml  pipeline_country_week_features_daily.yaml  pipeline_live_country_signals.yaml  source_registry.yaml
configs/forecasting/: calibrate_country_day.yaml  calibrate_country_week.yaml  calibrate_country_week_interstate_onset_logit.yaml  calibrate_country_week_interstate_onset_structural_90d.yaml  calibrate_country_week_logit.yaml  calibrate_country_week_onset_logit.yaml  calibrate_country_week_onset_structural_90d.yaml  explain_country_day.yaml  (+24 more)
contracts/: model_card.schema.json  website_snapshot.schema.json
docs/: backtesting.md  current_state.md  data_platform.md  forecasting.md  methodology_assessment_2026-03-28.md  model_card_template.md  prediction_schema.json  website_operations.md
notebooks/: forecasting_demo.py
scripts/: run_backend_refresh.ps1  run_backend_refresh.py  write_site_snapshot_verify_inputs.py
src/: __init__.py
web/: README.md  next.config.ts  package-lock.json  package.json
(+273 files in other folders)
